# proclib

./: .gitattributes  .gitignore  README.md  install.bat  install.sh  pyproject.toml
scripts/: develop.sh
src/proclib/: Process.py  Runner.py  Timer.py  __init__.py
