[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "proclib"
version = "0.1.0"
description = "A Python library for working with processes running on a computer."
authors = [{ name = "Jan Ludvig Vinningland" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

# Dependencies
dependencies = [
    "psutil",
]

# Optional dependencies
#[project.optional-dependencies]
#dev = [
#    "black",
#]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
